@@ -1,7 +1,7 @@
 package pl.luczak.michal.joboffersapp.validation.controller.api;
 
-import org.springframework.context.support.DefaultMessageSourceResolvable;
 import org.springframework.http.HttpStatus;
+import org.springframework.http.converter.HttpMessageNotReadableException;
 import org.springframework.web.bind.MethodArgumentNotValidException;
 import org.springframework.web.bind.annotation.ControllerAdvice;
 import org.springframework.web.bind.annotation.ExceptionHandler;
@@ -9,6 +9,7 @@ import org.springframework.web.bind.annotation.ResponseBody;
 import org.springframework.web.bind.annotation.ResponseStatus;
 import org.springframework.web.method.annotation.MethodArgumentTypeMismatchException;
 
+import java.util.Collections;
 import java.util.List;
 import java.util.Objects;
 
@@ -18,23 +19,37 @@ class APIValidationErrorHandler {
     @ResponseStatus(HttpStatus.BAD_REQUEST)
     @ExceptionHandler(MethodArgumentNotValidException.class)
     @ResponseBody
-    APIValidationErrorResponseDTO handleMethodArgumentNotValidException(MethodArgumentNotValidException exception) {
-        List<String> errors = exception.getBindingResult()
-                .getAllErrors()
+    APIValidationErrorDTO handleMethodArgumentNotValidException(MethodArgumentNotValidException exception) {
+        List<String> errorMessages = exception.getBindingResult()
+                .getFieldErrors()
                 .stream()
-                .map(DefaultMessageSourceResolvable::getDefaultMessage)
-                .filter(Objects::nonNull)
+                .map(error -> String.format(
+                        Objects.requireNonNull(error.getDefaultMessage()),
+                        error.getField())
+                )
                 .toList();
-        return new APIValidationErrorResponseDTO(errors, HttpStatus.BAD_REQUEST);
+        return new APIValidationErrorDTO(errorMessages);
+    }
+
+    @ResponseStatus(HttpStatus.BAD_REQUEST)
+    @ExceptionHandler(HttpMessageNotReadableException.class)
+    @ResponseBody
+    APIValidationErrorDTO handleHttpMessageNotReadableException() {
+        return new APIValidationErrorDTO(Collections.singletonList("Unreadable request content. Please use JSON format"));
     }
 
     @ResponseStatus(HttpStatus.BAD_REQUEST)
     @ExceptionHandler(MethodArgumentTypeMismatchException.class)
     @ResponseBody
-    APIValidationErrorResponseDTO handleMethodArgumentTypeMismatchException(MethodArgumentTypeMismatchException exception) {
-        return new APIValidationErrorResponseDTO(
-                List.of(exception.getMessage()),
-                HttpStatus.BAD_REQUEST
+    APIValidationErrorDTO handleMethodArgumentTypeMismatchException(MethodArgumentTypeMismatchException exception) {
+        return new APIValidationErrorDTO(
+                Collections.singletonList(
+                        String.format(
+                                "Failed to convert input: %s to %s",
+                                exception.getValue(),
+                                Objects.requireNonNull(exception.getRequiredType()).getSimpleName()
+                        )
+                )
         );
     }
 }
